{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 624,
  "lineage": "88953c2e-7135-7d1f-3383-86c40ba91745",
  "resources": [
    {
      "module": "module.network[\"east\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "wan_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-east/providers/Microsoft.Network/networkSecurityGroups/east-nsg-wan",
            "location": "eastus",
            "name": "east-nsg-wan",
            "resource_group_name": "rg-sdwan-east",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Allow-All-Outbound",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "4500",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-IPSec-NATT",
                "priority": 120,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "500",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-IPSec-ISAKMP",
                "priority": 110,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "east-nsg-wan",
            "resource_group_name": "rg-sdwan-east",
            "subscription_id": "8527d19f-1ff6-461c-a89e-da961a355bed"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"east\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "lan",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-east/providers/Microsoft.Network/virtualNetworks/east-vnet-sdwan/subnets/east-lan-subnet",
            "name": "east-lan-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-sdwan-east",
            "virtual_network_name": "east-vnet-sdwan"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "east-lan-subnet",
            "resource_group_name": "rg-sdwan-east",
            "subscription_id": "8527d19f-1ff6-461c-a89e-da961a355bed",
            "virtual_network_name": "east-vnet-sdwan"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"east\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "wan",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-east/providers/Microsoft.Network/virtualNetworks/east-vnet-sdwan/subnets/east-wan-subnet",
            "name": "east-wan-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-sdwan-east",
            "virtual_network_name": "east-vnet-sdwan"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "east-wan-subnet",
            "resource_group_name": "rg-sdwan-east",
            "subscription_id": "8527d19f-1ff6-461c-a89e-da961a355bed",
            "virtual_network_name": "east-vnet-sdwan"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"east\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "wan_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-east/providers/Microsoft.Network/virtualNetworks/east-vnet-sdwan/subnets/east-wan-subnet",
            "network_security_group_id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-east/providers/Microsoft.Network/networkSecurityGroups/east-nsg-wan",
            "subnet_id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-east/providers/Microsoft.Network/virtualNetworks/east-vnet-sdwan/subnets/east-wan-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.wan_nsg",
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.wan",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"east\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f6bb17bd-0e12-41a3-826c-b76b9fc7e224",
            "id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-east/providers/Microsoft.Network/virtualNetworks/east-vnet-sdwan",
            "location": "eastus",
            "name": "east-vnet-sdwan",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-sdwan-east"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "east-vnet-sdwan",
            "resource_group_name": "rg-sdwan-east",
            "subscription_id": "8527d19f-1ff6-461c-a89e-da961a355bed"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"west\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "wan_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-west/providers/Microsoft.Network/networkSecurityGroups/west-nsg-wan",
            "location": "westus",
            "name": "west-nsg-wan",
            "resource_group_name": "rg-sdwan-west",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Allow-All-Outbound",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "4500",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-IPSec-NATT",
                "priority": 120,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "500",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-IPSec-ISAKMP",
                "priority": 110,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "west-nsg-wan",
            "resource_group_name": "rg-sdwan-west",
            "subscription_id": "8527d19f-1ff6-461c-a89e-da961a355bed"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"west\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "lan",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-west/providers/Microsoft.Network/virtualNetworks/west-vnet-sdwan/subnets/west-lan-subnet",
            "name": "west-lan-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-sdwan-west",
            "virtual_network_name": "west-vnet-sdwan"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "west-lan-subnet",
            "resource_group_name": "rg-sdwan-west",
            "subscription_id": "8527d19f-1ff6-461c-a89e-da961a355bed",
            "virtual_network_name": "west-vnet-sdwan"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"west\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "wan",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-west/providers/Microsoft.Network/virtualNetworks/west-vnet-sdwan/subnets/west-wan-subnet",
            "name": "west-wan-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-sdwan-west",
            "virtual_network_name": "west-vnet-sdwan"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "west-wan-subnet",
            "resource_group_name": "rg-sdwan-west",
            "subscription_id": "8527d19f-1ff6-461c-a89e-da961a355bed",
            "virtual_network_name": "west-vnet-sdwan"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"west\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "wan_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-west/providers/Microsoft.Network/virtualNetworks/west-vnet-sdwan/subnets/west-wan-subnet",
            "network_security_group_id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-west/providers/Microsoft.Network/networkSecurityGroups/west-nsg-wan",
            "subnet_id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-west/providers/Microsoft.Network/virtualNetworks/west-vnet-sdwan/subnets/west-wan-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.wan_nsg",
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.wan",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"west\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ca9a11cc-7c70-4d63-8dda-9b3333e91736",
            "id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-west/providers/Microsoft.Network/virtualNetworks/west-vnet-sdwan",
            "location": "westus",
            "name": "west-vnet-sdwan",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-sdwan-west"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "west-vnet-sdwan",
            "resource_group_name": "rg-sdwan-west",
            "subscription_id": "8527d19f-1ff6-461c-a89e-da961a355bed"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm[\"east\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "lan",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-east/providers/Microsoft.Network/networkInterfaces/east-nic-lan",
            "internal_domain_name_suffix": "xul1x3qsb0rudatmw3vz5r5cee.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-east/providers/Microsoft.Network/virtualNetworks/east-vnet-sdwan/subnets/east-lan-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "east-nic-lan",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-sdwan-east",
            "tags": {
              "app": "sdwan-sim",
              "role": "edge-lan",
              "site": "east"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "east-nic-lan",
            "resource_group_name": "rg-sdwan-east",
            "subscription_id": "8527d19f-1ff6-461c-a89e-da961a355bed"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.wan_nsg",
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.lan",
            "module.network.azurerm_subnet.wan",
            "module.network.azurerm_subnet_network_security_group_association.wan_assoc",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm[\"east\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "wan",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-east/providers/Microsoft.Network/networkInterfaces/east-nic-wan",
            "internal_domain_name_suffix": "xul1x3qsb0rudatmw3vz5r5cee.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-east/providers/Microsoft.Network/publicIPAddresses/east-sdwan-pip",
                "subnet_id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-east/providers/Microsoft.Network/virtualNetworks/east-vnet-sdwan/subnets/east-wan-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "east-nic-wan",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-sdwan-east",
            "tags": {
              "app": "sdwan-sim",
              "role": "edge-wan",
              "site": "east"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "east-nic-wan",
            "resource_group_name": "rg-sdwan-east",
            "subscription_id": "8527d19f-1ff6-461c-a89e-da961a355bed"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.wan_nsg",
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.lan",
            "module.network.azurerm_subnet.wan",
            "module.network.azurerm_subnet_network_security_group_association.wan_assoc",
            "module.network.azurerm_virtual_network.vnet",
            "module.vm.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.vm[\"east\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-east/providers/Microsoft.Network/publicIPAddresses/east-sdwan-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.246.176.4",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "east-sdwan-pip",
            "resource_group_name": "rg-sdwan-east",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "app": "sdwan-sim",
              "role": "edge",
              "site": "east"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.wan_nsg",
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.lan",
            "module.network.azurerm_subnet.wan",
            "module.network.azurerm_subnet_network_security_group_association.wan_assoc",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm[\"west\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "lan",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-west/providers/Microsoft.Network/networkInterfaces/west-nic-lan",
            "internal_domain_name_suffix": "zqizvstqprru1do0tmzth0ixgg.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.1.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-west/providers/Microsoft.Network/virtualNetworks/west-vnet-sdwan/subnets/west-lan-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "name": "west-nic-lan",
            "private_ip_address": "10.1.2.4",
            "private_ip_addresses": [
              "10.1.2.4"
            ],
            "resource_group_name": "rg-sdwan-west",
            "tags": {
              "app": "sdwan-sim",
              "role": "edge-lan",
              "site": "west"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "west-nic-lan",
            "resource_group_name": "rg-sdwan-west",
            "subscription_id": "8527d19f-1ff6-461c-a89e-da961a355bed"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.wan_nsg",
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.lan",
            "module.network.azurerm_subnet.wan",
            "module.network.azurerm_subnet_network_security_group_association.wan_assoc",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm[\"west\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "wan",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-west/providers/Microsoft.Network/networkInterfaces/west-nic-wan",
            "internal_domain_name_suffix": "zqizvstqprru1do0tmzth0ixgg.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-west/providers/Microsoft.Network/publicIPAddresses/west-sdwan-pip",
                "subnet_id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-west/providers/Microsoft.Network/virtualNetworks/west-vnet-sdwan/subnets/west-wan-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "name": "west-nic-wan",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "rg-sdwan-west",
            "tags": {
              "app": "sdwan-sim",
              "role": "edge-wan",
              "site": "west"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "west-nic-wan",
            "resource_group_name": "rg-sdwan-west",
            "subscription_id": "8527d19f-1ff6-461c-a89e-da961a355bed"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.wan_nsg",
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.lan",
            "module.network.azurerm_subnet.wan",
            "module.network.azurerm_subnet_network_security_group_association.wan_assoc",
            "module.network.azurerm_virtual_network.vnet",
            "module.vm.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.vm[\"west\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8527d19f-1ff6-461c-a89e-da961a355bed/resourceGroups/rg-sdwan-west/providers/Microsoft.Network/publicIPAddresses/west-sdwan-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.185.51.210",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "west-sdwan-pip",
            "resource_group_name": "rg-sdwan-west",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "app": "sdwan-sim",
              "role": "edge",
              "site": "west"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.wan_nsg",
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.lan",
            "module.network.azurerm_subnet.wan",
            "module.network.azurerm_subnet_network_security_group_association.wan_assoc",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    }
  ]
}